--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,6 @@ spring.data.mongodb.host=localhost
 spring.data.mongodb.port=27017
 spring.data.mongodb.database=training
 
+app.welcome.title=Forum - Welcome
+app.thread.title=Forum - Threads
+app.user.title=Forum - Profile
