updated profile page

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,6 @@ spring.data.mongodb.database=training
 app.welcome.title=Forum - Welcome
 app.thread.title=Forum - Threads
 app.user.title=Forum - Profile
+
+spring.freemarker.template-loader-path: classpath:/templates
+spring.freemarker.suffix: .ftl
